components/3.22.x/languages/jsonpath-language.md
# JSONPath

**Since Camel 2.13**

Camel supports [JSONPath](https://github.com/json-path/JsonPath/) to allow using [Expression](../../../manual/expression.md) or [Predicate](../../../manual/predicate.md) on JSON messages.

## JSONPath Options

The JSONPath language supports 10 options, which are listed below.

   
| Name | Default | Java Type | Description |
| --- | --- | --- | --- |
| **suppressExceptions** | `false` | `Boolean` | Whether to suppress exceptions such as PathNotFoundException. |
| **allowSimple** | `true` | `Boolean` | Whether to allow in inlined Simple exceptions in the JSONPath expression. |
| **allowEasyPredicate** | `true` | `Boolean` | Whether to allow using the easy predicate parser to pre-parse predicates. |
| **writeAsString** | `false` | `Boolean` | Whether to write the output of each row/element as a JSON String value instead of a Map/POJO value. |
| **unpackArray** | `false` | `Boolean` | Whether to unpack a single element json-array into an object. |
| **option** |  | `Enum` | 
To configure additional options on JSONPath. Multiple values can be separated by comma.

Enum values:

-   DEFAULT\_PATH\_LEAF\_TO\_NULL
    
-   ALWAYS\_RETURN\_LIST
    
-   AS\_PATH\_LIST
    
-   SUPPRESS\_EXCEPTIONS
    
-   REQUIRE\_PROPERTIES
    





 |
| **headerName** |  | `String` | Name of header to use as input, instead of the message body It has as higher precedent than the propertyName if both are set. |
| **propertyName** |  | `String` | Name of property to use as input, instead of the message body. It has a lower precedent than the headerName if both are set. |
| **resultType** |  | `String` | Sets the class of the result type (type from output). |
| **trim** | `true` | `Boolean` | Whether to trim the value to remove leading and trailing whitespaces and line breaks. |

## Examples

For example, you can use JSONPath in a [Predicate](../../../manual/predicate.md) with the [Content Based Router](../eips/choice-eip.md) EIP.

```java
from("queue:books.new")
  .choice()
    .when().jsonpath("$.store.book[?(@.price < 10)]")
      .to("jms:queue:book.cheap")
    .when().jsonpath("$.store.book[?(@.price < 30)]")
      .to("jms:queue:book.average")
    .otherwise()
      .to("jms:queue:book.expensive");
```

And in XML DSL:

```xml
<route>
  <from uri="direct:start"/>
  <choice>
    <when>
      <jsonpath>$.store.book[?(@.price &lt; 10)]</jsonpath>
      <to uri="mock:cheap"/>
    </when>
    <when>
      <jsonpath>$.store.book[?(@.price &lt; 30)]</jsonpath>
      <to uri="mock:average"/>
    </when>
    <otherwise>
      <to uri="mock:expensive"/>
    </otherwise>
  </choice>
</route>
```

## JSONPath Syntax

Using the JSONPath syntax takes some time to learn, even for basic predicates. So for example to find out all the cheap books you have to do:

```text
$.store.book[?(@.price < 20)]
```

### Easy JSONPath Syntax

However, what if you could just write it as:

```text
store.book.price < 20
```

And you can omit the path if you just want to look at nodes with a price key:

```text
price < 20
```

To support this there is a `EasyPredicateParser` which kicks-in if you have defined the predicate using a basic style. That means the predicate must not start with the `$` sign, and only include one operator.

The easy syntax is:

```text
left OP right
```

You can use Camel simple language in the right operator, eg:

```text
store.book.price < ${header.limit}
```

See the [JSONPath](https://github.com/json-path/JsonPath) project page for more syntax examples.

## Supported message body types

Camel JSONPath supports message body using the following types:

 
| Type | Comment |
| --- | --- |
| `File` | Reading from files |
| `String` | Plain strings |
| `Map` | Message bodies as `java.util.Map` types |
| `List` | Message bodies as `java.util.List` types |
| `POJO` | **Optional** If Jackson is on the classpath, then camel-jsonpath is able to use Jackson to read the message body as POJO and convert to `java.util.Map` which is supported by JSONPath. For example, you can add `camel-jackson` as dependency to include Jackson. |
| `InputStream` | If none of the above types matches, then Camel will attempt to read the message body as a `java.io.InputStream`. |

If a message body is of unsupported type then an exception is thrown by default, however you can configure JSONPath to suppress exceptions (see below)

## Suppressing exceptions

By default, jsonpath will throw an exception if the json payload does not have a valid path accordingly to the configured jsonpath expression. In some use-cases you may want to ignore this in case the json payload contains optional data. Therefore, you can set the option `suppressExceptions` to `true` to ignore this as shown:

```java
from("direct:start")
    .choice()
        // use true to suppress exceptions
        .when().jsonpath("person.middlename", true)
            .to("mock:middle")
        .otherwise()
            .to("mock:other");
```

And in XML DSL:

```xml
<route>
  <from uri="direct:start"/>
  <choice>
    <when>
      <jsonpath suppressExceptions="true">person.middlename</jsonpath>
      <to uri="mock:middle"/>
    </when>
    <otherwise>
      <to uri="mock:other"/>
    </otherwise>
  </choice>
</route>
```

This option is also available on the `@JsonPath` annotation.

## Inline Simple expressions

It’s possible to inlined [Simple](simple-language.md) language in the JSONPath expression using the simple syntax `${xxx}`.

An example is shown below:

```java
from("direct:start")
  .choice()
    .when().jsonpath("$.store.book[?(@.price < ${header.cheap})]")
      .to("mock:cheap")
    .when().jsonpath("$.store.book[?(@.price < ${header.average})]")
      .to("mock:average")
    .otherwise()
      .to("mock:expensive");
```

And in XML DSL:

```xml
<route>
  <from uri="direct:start"/>
  <choice>
    <when>
      <jsonpath>$.store.book[?(@.price &lt; ${header.cheap})]</jsonpath>
      <to uri="mock:cheap"/>
    </when>
    <when>
      <jsonpath>$.store.book[?(@.price &lt; ${header.average})]</jsonpath>
      <to uri="mock:average"/>
    </when>
    <otherwise>
      <to uri="mock:expensive"/>
    </otherwise>
  </choice>
</route>
```

You can turn off support for inlined Simple expression by setting the option `allowSimple` to `false` as shown:

```java
.when().jsonpath("$.store.book[?(@.price < 10)]", false, false)
```

And in XML DSL:

```xml
<jsonpath allowSimple="false">$.store.book[?(@.price &lt; 10)]</jsonpath>
```

## JSONPath injection

You can use [Bean Integration](../../../manual/bean-integration.md) to invoke a method on a bean and use various languages such as JSONPath (via the `@JsonPath` annotation) to extract a value from the message and bind it to a method parameter, as shown below:

```java
public class Foo {

    @Consume("activemq:queue:books.new")
    public void doSomething(@JsonPath("$.store.book[*].author") String author, @Body String json) {
      // process the inbound message here
    }
}
```

## Encoding Detection

The encoding of the JSON document is detected automatically, if the document is encoded in unicode (UTF-8, UTF-16LE, UTF-16BE, UTF-32LE, UTF-32BE ) as specified in RFC-4627. If the encoding is a non-unicode encoding, you can either make sure that you enter the document in String format to JSONPath, or you can specify the encoding in the header `CamelJsonPathJsonEncoding` which is defined as a constant in: `JsonpathConstants.HEADER_JSON_ENCODING`.

## Split JSON data into sub rows as JSON

You can use JSONPath to split a JSON document, such as:

```java
from("direct:start")
    .split().jsonpath("$.store.book[*]", List.class)
    .to("log:book");
```

> **Important**
> Notice how we specify `List.class` as the result-type. This is because if there is only a single element (only 1 book), then jsonpath will return the single entity as a `Map` instead of `List<Map>`. Therefore, we tell Camel that the result should always be a `List`, and Camel will then automatic wrap the single element into a new `List` object.

Then each book is logged, however the message body is a `Map` instance. Sometimes you may want to output this as plain String JSON value instead, which can be done with the `writeAsString` option as shown:

```java
from("direct:start")
    .split().jsonpathWriteAsString("$.store.book[*]", List.class)
    .to("log:book");
```

Then each book is logged as a String JSON value.

## Unpack a single-element array into an object

It is possible to unpack a single-element array into an object:

```java
from("direct:start")
    .setBody().jsonpathUnpack("$.store.book", Book.class)
    .to("log:book");
```

If book array contains only one book, it will be converted into a Book object.

## Using header as input

By default, JSONPath uses the message body as the input source. However, you can also use a header as input by specifying the `headerName` option.

For example to count the number of books from a JSON document that was stored in a header named `books` you can do:

```java
from("direct:start")
    .setHeader("numberOfBooks")
        .jsonpath("$..store.book.length()", false, int.class, "books")
    .to("mock:result");
```

In the `jsonpath` expression above we specify the name of the header as `books`, and we also told that we wanted the result to be converted as an integer by `int.class`.

The same example in XML DSL would be:

```xml
<route>
  <from uri="direct:start"/>
  <setHeader name="numberOfBooks">
    <jsonpath headerName="books" resultType="int">$..store.book.length()</jsonpath>
  </setHeader>
  <to uri="mock:result"/>
</route>
```

## Spring Boot Auto-Configuration

When using jsonpath with Spring Boot make sure to use the following Maven dependency to have support for auto configuration:

```xml
<dependency>
  <groupId>org.apache.camel.springboot</groupId>
  <artifactId>camel-jsonpath-starter</artifactId>
  <version>x.x.x</version>
  <!-- use the same version as your Camel core version -->
</dependency>
```

The component supports 10 options, which are listed below.

   
| Name | Description | Default | Type |
| --- | --- | --- | --- |
| **camel.language.jsonpath.allow-easy-predicate** | Whether to allow using the easy predicate parser to pre-parse predicates. | true | Boolean |
| **camel.language.jsonpath.allow-simple** | Whether to allow in inlined Simple exceptions in the JSONPath expression. | true | Boolean |
| **camel.language.jsonpath.enabled** | Whether to enable auto configuration of the jsonpath language. This is enabled by default. |  | Boolean |
| **camel.language.jsonpath.header-name** | Name of header to use as input, instead of the message body It has as higher precedent than the propertyName if both are set. |  | String |
| **camel.language.jsonpath.option** | To configure additional options on JSONPath. Multiple values can be separated by comma. |  | String |
| **camel.language.jsonpath.property-name** | Name of property to use as input, instead of the message body. It has a lower precedent than the headerName if both are set. |  | String |
| **camel.language.jsonpath.suppress-exceptions** | Whether to suppress exceptions such as PathNotFoundException. | false | Boolean |
| **camel.language.jsonpath.trim** | Whether to trim the value to remove leading and trailing whitespaces and line breaks. | true | Boolean |
| **camel.language.jsonpath.unpack-array** | Whether to unpack a single element json-array into an object. | false | Boolean |
| **camel.language.jsonpath.write-as-string** | Whether to write the output of each row/element as a JSON String value instead of a Map/POJO value. | false | Boolean |